Omg fixed graph on mobile

--- a/src/assets/scss/breakpoints/_base.scss
+++ b/src/assets/scss/breakpoints/_base.scss
@@ -137,7 +137,20 @@ h1, h2, h3, h4, h5, h6 {
 .dashboard-panel {
     display:none;
 }
+#market-status {
+  color: $lighter_gray;
+  font: headline(1.5em);
+  padding: 0.5em 0;
+  text-transform: uppercase;
 
+  .status {
+    background: $green;
+    color: $white;
+    padding: 3px 7px 0 7px;
+    margin: 0 5px;
+    border-radius: 5px;
+  }
+}
 .active-panel {
     display: block !important;
 }
@@ -275,16 +288,17 @@ h1, h2, h3, h4, h5, h6 {
                 text-transform: uppercase;
                 margin-right: 10px;
             }
-
         }
     }
 }
 .summary-panel-main .overview-spot,
+.summary-panel-main #market-status,
 .summary-panel-stack .middle, 
 .summary-panel-graph .middle, 
 .summary-panel-stack .overview-stack,
-.summary-panel-graph #bullion-graph {
-    display: block;
+.summary-panel-graph #bullion-graph,
+ {
+    display: block !important;
 }
 
 #market-time-change {
